test/Fail/LocalRewriteLambda.err
LocalRewriteLambda.agda:9.19-35: error: [LocalRewriteOutsideTelescope]
Local rewrite rule arguments are (currently) only allowed in module telescopes. Consider creating an anonymous module.
when checking that the expression 0 ≡ x → Nat is a type

LocalRewriteLambda.agda:10.9-16: error: [LambdaBoundLocalRewrite]
Local rewrite rules cannot be bound in lambdas
when checking that the expression λ p → x has type 0 ≡ x → Nat
